add jwtUtil class

--- a/expense-tracker/src/main/resources/application-dev.properties
+++ b/expense-tracker/src/main/resources/application-dev.properties
@@ -11,3 +11,5 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
 spring.datasource.hikari.connection-timeout=20000
 spring.datasource.hikari.maximum-pool-size=15
+
+jwt.secret=uX7@L3q2#nK9p4Z!$wR$8T5v1^Yj0bW&
