--- a/expense-tracker/src/main/resources/application-dev.properties
+++ b/expense-tracker/src/main/resources/application-dev.properties
@@ -2,14 +2,19 @@ spring.config.activate.on-profile=dev
 server.address=127.0.0.1
 server.port=10001
 
+#extra logging in dev env
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.http.converter=DEBUG
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=true
+
 spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/expense-tracker
 spring.datasource.username=user
 spring.datasource.password=1234
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.show-sql=true
-spring.datasource.hikari.connection-timeout=20000
-spring.datasource.hikari.maximum-pool-size=15
 
 jwt.secret=uX7@L3q2#nK9p4Z!$wR$8T5v1^Yj0bW&
+
+springdoc.swagger-ui.enabled=true
+
