--- a/expense-tracker/src/main/resources/application-prod.properties
+++ b/expense-tracker/src/main/resources/application-prod.properties
@@ -9,3 +9,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=validate
 spring.datasource.hikari.connection-timeout=20000
 spring.datasource.hikari.maximum-pool-size=15
+
+jwt.secret=uX7@L3q2#nK9p4Z!$wR$8T5v1^Yj0bW&
+springdoc.swagger-ui.enabled=true
