add some fix on security

--- a/expense-tracker/src/main/resources/application-dev.properties
+++ b/expense-tracker/src/main/resources/application-dev.properties
@@ -14,7 +14,7 @@ spring.datasource.password=1234
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
-jwt.secret=uX7@L3q2#nK9p4Z!$wR$8T5v1^Yj0bW&
+jwt.secret=kyDSDp6XjRqlFZ5GQhzsQkxvW9MyJ68M8xoPLO3FhtM=
 
 springdoc.swagger-ui.enabled=true
 
