fix opendoc/swagger issues

--- a/expense-tracker/src/main/resources/application-dev.properties
+++ b/expense-tracker/src/main/resources/application-dev.properties
@@ -17,4 +17,5 @@ spring.jpa.hibernate.ddl-auto=update
 jwt.secret=kyDSDp6XjRqlFZ5GQhzsQkxvW9MyJ68M8xoPLO3FhtM=
 
 springdoc.swagger-ui.enabled=true
-
+springdoc.swagger-ui.path=/opendoc/ui
+springdoc.api-docs.path=/opendoc/api
