--- a/expense-tracker/src/main/resources/application-prod.properties
+++ b/expense-tracker/src/main/resources/application-prod.properties
@@ -10,5 +10,7 @@ spring.jpa.hibernate.ddl-auto=validate
 spring.datasource.hikari.connection-timeout=20000
 spring.datasource.hikari.maximum-pool-size=15
 
-jwt.secret=uX7@L3q2#nK9p4Z!$wR$8T5v1^Yj0bW&
+jwt.secret=kyDSDp6XjRqlFZ5GQhzsQkxvW9MyJ68M8xoPLO3FhtM=
 springdoc.swagger-ui.enabled=true
+springdoc.swagger-ui.path=/opendoc/ui
+springdoc.api-docs.path=/opendoc/api
