--- a/expense-tracker/pom.xml
+++ b/expense-tracker/pom.xml
@@ -91,6 +91,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>expense-tracker-target</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
